--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
+    "@hallysonh/ngx-imageviewer": "^2.0.4",
     "ngx-spinner": "^8.0.3",
     "firebase": "^7.5.0",
     "hammerjs": "^2.0.8",
