--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.3",
-    "@angular/cdk": "~8.2.3",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.3",
     "@angular/compiler": "~8.2.3",
     "@angular/core": "~8.2.3",
@@ -24,8 +24,8 @@
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
     "@haseeamarathunga/ng-image-viewer": "0.0.6",
-    "font-awesome": "^4.7.0",
     "firebase": "^7.5.0",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ngx-spinner": "^8.0.3",
     "rxjs": "~6.4.0",
